@@ -67,8 +67,6 @@ sub processLine # (file, line, logger)
 {
     my ($self, $file, $line, $dbengine) = @_;
 
-    return if ($self->_skipLine());
-
     unless ($line =~ /^(\w+\s+\d+ \d\d:\d\d:\d\d) .*smbd_audit.*?: (.+)/) {
         return;
     }
@@ -137,34 +135,5 @@ sub processLine # (file, line, logger)
         $dbengine->insert('samba_access', \%dataToInsert);
     }
 }
-
-
-# Method: _skipLine
-#
-#       Above method "processLine" is called 3 times, because
-#       our 3 loggers are watching the same file.
-#
-#       To avoid inserting the same log line 3 times, we keep track
-#       of the times we have been called.
-#
-sub _skipLine
-{
-        my ($self) = @_;
-
-        my $skip = $self->{skip};
-        unless (defined($skip)) {
-                $self->{skip} = 0;
-                return 0;
-        }
-
-        if ($skip == 2) {
-                $self->{skip} = 0;
-                return 0;
-        } else {
-                $self->{skip}++;
-                return 1;
-        }
-}
-
 
 1;
